// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Snapshots should match snapshot with checked checkbox 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
      value="value"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={true}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "backgroundColor": "#F46152",
                  "borderColor": "#F46152",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
          <RNSVGSvgView
            fill="#FFFFFF"
            focusable={false}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                },
                Object {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#41414A",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "paddingLeft": 8,
              },
            ]
          }
        >
          Checkbox Component
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <View
      style={
        Array [
          Object {
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "400",
            },
          ]
        }
      >
        Helper Text
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> Snapshots should match snapshot with default checkbox 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
      value="value"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={false}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "borderColor": "#F46152",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#41414A",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "paddingLeft": 8,
              },
            ]
          }
        >
          Checkbox Component
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <View
      style={
        Array [
          Object {
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "400",
            },
          ]
        }
      >
        Helper Text
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> Snapshots should match snapshot with disabled and checked checkbox 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={true}
      value="value"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={true}
            disabled={true}
            pressed={false}
            style={
              Array [
                Object {
                  "backgroundColor": "#9898A6",
                  "borderColor": "#9898A6",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
          <RNSVGSvgView
            fill="#FFFFFF"
            focusable={false}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                },
                Object {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#41414A",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "paddingLeft": 8,
              },
            ]
          }
        >
          Checkbox Component
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <View
      style={
        Array [
          Object {
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "400",
            },
          ]
        }
      >
        Helper Text
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> Snapshots should match snapshot with disabled checkbox 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={true}
      value="value"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={false}
            disabled={true}
            pressed={false}
            style={
              Array [
                Object {
                  "borderColor": "#9898A6",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#41414A",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "paddingLeft": 8,
              },
            ]
          }
        >
          Checkbox Component
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <View
      style={
        Array [
          Object {
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "400",
            },
          ]
        }
      >
        Helper Text
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> Snapshots should match snapshot with error and checked checkbox 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
      value="value"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={true}
            disabled={false}
            error="Error text"
            pressed={false}
            style={
              Array [
                Object {
                  "backgroundColor": "#CB3530",
                  "borderColor": "#CB3530",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
          <RNSVGSvgView
            fill="#FFFFFF"
            focusable={false}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                },
                Object {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#41414A",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "paddingLeft": 8,
              },
            ]
          }
        >
          Checkbox Component
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <View
      style={
        Array [
          Object {
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        error="Error text"
        style={
          Array [
            Object {
              "color": "#CB3530",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "400",
            },
          ]
        }
      >
        Error text
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> Snapshots should match snapshot with error checkbox 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
      value="value"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={false}
            disabled={false}
            error="Error text"
            pressed={false}
            style={
              Array [
                Object {
                  "borderColor": "#CB3530",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#41414A",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "paddingLeft": 8,
              },
            ]
          }
        >
          Checkbox Component
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <View
      style={
        Array [
          Object {
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        error="Error text"
        style={
          Array [
            Object {
              "color": "#CB3530",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "400",
            },
          ]
        }
      >
        Error text
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> Snapshots should match snapshot with variants 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={false}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "borderColor": "#F46152",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={false}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "borderColor": "#652CDB",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="secondary"
          />
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={false}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "borderColor": "#22766B",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="tertiary"
          />
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={true}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "backgroundColor": "#F46152",
                  "borderColor": "#F46152",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
          <RNSVGSvgView
            fill="#FFFFFF"
            focusable={false}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                },
                Object {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={true}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "backgroundColor": "#652CDB",
                  "borderColor": "#652CDB",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="secondary"
          />
          <RNSVGSvgView
            fill="#FFFFFF"
            focusable={false}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                },
                Object {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={true}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "backgroundColor": "#22766B",
                  "borderColor": "#22766B",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="tertiary"
          />
          <RNSVGSvgView
            fill="#FFFFFF"
            focusable={false}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                },
                Object {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
</View>
`;

exports[`<Checkbox /> Snapshots should match snapshot without label 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={false}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "borderColor": "#F46152",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
</View>
`;

exports[`<Checkbox /> Snapshots should match snapshot without label 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      disabled={false}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
            ]
          }
        >
          <View
            checked={false}
            disabled={false}
            pressed={false}
            style={
              Array [
                Object {
                  "borderColor": "#F46152",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "height": 24,
                  "position": "absolute",
                  "width": 24,
                },
              ]
            }
            variant="primary"
          />
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
</View>
`;
